# adass-2023-ml4gw-demo

./: .gitignore  .pre-commit-config.yaml  README.md  apptainer.def  conda-lock.yml  data.ipynb  environment.yaml  pyproject.toml  rise.css  train.ipynb  train.slides.html
.github/workflows/: static.yml
utils/: __init__.py  data.py  evaluate.py  ignore.py  infer.py  io.py  metrics.py  nn.py  plotting.py
